API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

02-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added write support for RawLD
	Added new utility modwrite to call a write interface

30-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Fixed memory leak in write methods of RawText
	Added some initial support for writing to zText
	Added a 'not working yet' mod2zmod utility


20-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added new utility, step2vpl, for dumping BSISG STEP module in
		vpl format.
	Added new make target: install_config to put a basic install on
		a box.
	Added a QUICKSTART section to INSTALL file

17-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added new utility, stepdump, for dumping BSISG STEP modules.

11-Nov-2000	Joachim Ansorg <jansorg@crosswire.org>
	Commited new version of the sk locale file.


* Release 1.5.1a *


06-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added more debug for tests/mgrtest.cpp
	Hardcoded VerseKey::NewIndex to KJV max index

01-Nov-2000	Joachim Ansorg <jansorg@crosswire.org> 
	Added test program for indexes using VerseKey::NewIndex()

31-Oct-2000	Joachim Ansorg <jansorg@crosswire.org>
	Fixed vpl2mod to work correctly with headers and files without
		references.

30-Oct-2000	Troy A. Griffitts <scribe@crosswire.org>
	Hacked SWModule::Search to hardcode high index always to
		32300 for now until we get NewIndex working properly.
		This will be inaccurate for range searches but will
		always return a value between 0-100
	Made rawverse.cpp utility functions to not be so picky
		about trailing '/' or '\' on path names.
	Made vpl2mod work better when 'prepend verse ref' option
		is turned on.  There seems to be no sense in outputting
		blank entries in this scenerio.

29-Oct-2000	Joachim Ansorg <jansorg@crosswire.org>
	Reverted the patch from 23-Oct-2000
	gbfhtml.cpp: Changed the HTML tag for new paragraph from <P> to <BR>